# pok-scorer

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  README.md  REFACTOR_SUMMARY.md  app-v2.js  app.js  claude.md  index-minimal.html  index.html  package-lock.json  package.json  pokrules.md  serve.py  styles.css
.claude/: settings.local.json
.github/workflows/: deploy.yml  train-detector.yml
css/: styles.css
image-detector/: CI-TRAINING-QUICKSTART.md  FORMAT-SPECIFICATION.md  IMPLEMENTATION-SUMMARY.md  PLAN.md  PYTHON-JS-ALIGNMENT.md  README-TRAINING.md  annotation-editor.html  annotation-editor.js  calibrator.html  calibrator.js  color-classifier.js  dataset-schema.json  detector.js  example-dataset.json  index.html  shared-styles.css
image-detector/datasets/: .gitignore  README.md  pok-dataset.json
image-detector/models/: .gitkeep  test.json
image-detector/scripts/: calibrate.py  models.py  pyproject.toml  test-complete.json  test_alignment.py  test_pydantic.py  validate.py
js/: README.md  app.js  command-handler.js  config.js  event-store.js  events.js  game-service.js  game-state-projection.js  pok-scorer-app.js  score-visualizer-service.js  scoring-service.js  ui-projection-v2.js  ui-projection.js
js/components/: index.js
js/effects/: Confetti.js  index.js
js/utils/: dom-helper.js  storage-service.js
tests/: README.md  index.html  run-tests.js
tests/integration/: game-flow.test.js  ui-components.test.js
tests/lib/: README.md  fixtures.js  mini-test.js  test-loader.js
tests/unit/: component-registry.test.js  component.test.js  (+7 more)
(+23 files in other folders)
